--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,6 @@
 <resources>
-    <string name="app_name">Flickr Ai Exemple</string>
-    <string name="action_settings">Settings</string>
-    <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="app_name">FlickerGallery</string>
+    <string name="home_title">Flicker Gallery</string>
+    <string name="details_title">Photo Details</string>
+    <string name="app_error">There was some problem loading the data. Try again later.</string>
 </resources>
